footer fix, adds collapse option

--- a/resources/sass/styles/layouts/_authLayout.scss
+++ b/resources/sass/styles/layouts/_authLayout.scss
@@ -1,8 +1,21 @@
 .header {
     background-color: $primary!important;
     border-bottom: lightblue 5px solid;
-    .logo{
-        font-size: 2rem;
-        color: white;
+    padding-left: unset!important;
+    .test123{
+        display: flex;
+        .collapse-icon{
+            font-size: 1rem;
+            display: flex;
+            align-items: center;
+            height: 64px;
+            width: 80px;
+            justify-content: center;
+        }
+        .logo{
+            padding-left: 3rem;
+            font-size: 2rem;
+            color: white;
+        }
     }
 }
